--- a/POS System/POS System.csproj
+++ b/POS System/POS System.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="FontAwesome.Sharp" Version="6.1.1" />
+    <PackageReference Include="Tiger.Clock" Version="2.0.0" />
   </ItemGroup>
 
   <ItemGroup>
