--- a/POS System/POS System.csproj
+++ b/POS System/POS System.csproj
@@ -11,6 +11,8 @@
 
   <ItemGroup>
     <PackageReference Include="FontAwesome.Sharp" Version="6.1.1" />
+    <PackageReference Include="MySql.Data" Version="8.0.27" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
     <PackageReference Include="Tiger.Clock" Version="2.0.0" />
   </ItemGroup>
 
